--- a/inicio.css
+++ b/inicio.css
@@ -11,12 +11,12 @@ body {
 
 .caixa {
     width: 100%;
-    height: 80px;
+    height: 90px;
     background: #161b22;
     padding-top: 15px;
 }
 
-.cabecalho h3 {
+.cabecalho h1 {
     float: left;
     color: white;
     font-family:'Open Sans';
@@ -37,14 +37,41 @@ body {
     margin: 0 auto;
 }
 
-#palavra_projeto {
+#palavra_laranja {
     color: orangered;
 }
 
-#palavra_home {
-    color: orangered;
-}
+
 
 ul {
     list-style: none;
+}
+
+.faixa input {
+    float: right;
+    margin-right: 5px;
+    width: 200px;
+    height: 20px;
+    margin-top: 20px;
+}
+
+.faixa button {
+    float: right;
+    background: orangered;
+    color: white;
+    height: 20px;
+    margin-top: 20px;
+
+}
+
+.faixa {
+    max-width: 1400px;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.faixa h1 {
+    float: left;
+    color: white;
+    font-family:'Open Sans';
 }
