--- a/inicio.css
+++ b/inicio.css
@@ -14,6 +14,7 @@ body {
     height: 90px;
     background: #232323;
     padding-top: 15px;
+    border-bottom: 5px solid orangered;
 }
 
 .titulo {
@@ -124,25 +125,29 @@ ul {
 
 
 .faixa_valores {
-    width: 100%;
-    min-height: 400px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: flex-start;
+        max-width: 1400px;
+        min-height: 400px;
+        text-align: center;
+        align-items: center;
+        margin: 0 auto;
 }
 
 .faixa_valores img {
-    width: 185px;
+    width: 145px;
 }
 
 .icones {
-    display: flex;
-    align-items:center;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    align-items: center;
     font-family: 'Open Sans';
-    font-size: ;
+    float: left;
+    text-align: center;
+    margin-left: 50px;
+    padding-top: 50px;
+}
+
+.container {
+    max-width: 1400px;
+    height: 100%;
+    margin: 0 auto;
 }
 
