--- a/inicio.css
+++ b/inicio.css
@@ -152,4 +152,15 @@ ul {
     padding-top: 50px;
 }
 
+.grafico {
+    height: 800px;
+    width: 600px;
+    margin: 0 auto;
+    font-family: 'open sans';
+}
 
+.canvas {
+    margin: 0;
+    border: 0;
+    padding: 0;
+}
